src/objects/Order.object
<CustomObject>
    <fields>
        <fullName>AZdata__c</fullName>
        <formula>Equipment__r.installationdate__c</formula>
        <label>安装日期</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AcceptanceClause__c</fullName>
        <label>非标验收条款</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>AcceptanceDate__c</fullName>
        <label>验收日期</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AccessoriesWarrantyPrice__c</fullName>
        <label>配件保修价格</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>未约定</fullName>
                </value>
                <value>
                    <fullName>有约定</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AccountBank__c</fullName>
        <label>开户行</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountNumber__c</fullName>
        <label>账号</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Affiliates__c</fullName>
        <label>关联公司</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>北京融惠联合医疗技术有限公司</fullName>
                </value>
                <value>
                    <fullName>柏林医疗投资有限公司</fullName>
                </value>
                <value>
                    <fullName>唐山冀东眼科医院有限公司</fullName>
                </value>
                <value>
                    <fullName>北京高视医疗信息技术有限公司</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AgencyBusinessScope__c</fullName>
        <formula>Contract.AgencyBusinessScope__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>代理商经营范围</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>数量</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Belonger__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>业务员</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BillingCustomer__c</fullName>
        <label>开票客户</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BusinessProcess__c</fullName>
        <label>业务流程</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>高视普通销售</fullName>
                </value>
                <value>
                    <fullName>技术服务延保销售</fullName>
                </value>
                <value>
                    <fullName>技术服务维修销售</fullName>
                </value>
                <value>
                    <fullName>寄存销售</fullName>
                </value>
                <value>
                    <fullName>技术服务保修销售</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ChannelDelivery__c</fullName>
        <label>渠道交付方式</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>采购订货交付</fullName>
                </value>
                <value>
                    <fullName>库存即刻交付</fullName>
                </value>
                <value>
                    <fullName>库存预留交付</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ClassifyIII__c</fullName>
        <label>分类III</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>ClassifyII__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>爱尔集团</fullName>
                </value>
                <value>
                    <fullName>华厦集团</fullName>
                </value>
                <value>
                    <fullName>华正集团</fullName>
                </value>
                <value>
                    <fullName>远程视界</fullName>
                </value>
                <value>
                    <fullName>蓝海之略</fullName>
                </value>
                <value>
                    <fullName>公立直销</fullName>
                </value>
                <value>
                    <fullName>全科医疗</fullName>
                </value>
                <value>
                    <fullName>朝聚眼科</fullName>
                </value>
                <value>
                    <fullName>新视界</fullName>
                </value>
                <value>
                    <fullName>阿玛施集团</fullName>
                </value>
                <value>
                    <fullName>区域代理</fullName>
                </value>
                <value>
                    <fullName>个案代理</fullName>
                </value>
                <value>
                    <fullName>普瑞集团</fullName>
                </value>
                <value>
                    <fullName>单体民营</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ClassifyII__c</fullName>
        <label>分类II</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Classify__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>公立直销</fullName>
                </value>
                <value>
                    <fullName>单体民营</fullName>
                </value>
                <value>
                    <fullName>集团客户</fullName>
                </value>
                <value>
                    <fullName>个案代理</fullName>
                </value>
                <value>
                    <fullName>区域代理</fullName>
                </value>
                <value>
                    <fullName>个案投资</fullName>
                </value>
                <value>
                    <fullName>投资平台</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Classify__c</fullName>
        <label>分类I</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>PublicPrivate__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>直销</fullName>
                </value>
                <value>
                    <fullName>渠道</fullName>
                </value>
                <value>
                    <fullName>公立直销</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CompanyName__c</fullName>
        <label>单位名称</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContractAmount__c</fullName>
        <label>合同金额（万）</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ContractCharacter__c</fullName>
        <label>合同性质</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>内贸</fullName>
                </value>
                <value>
                    <fullName>外贸</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ContractNO__c</fullName>
        <label>合同编号</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <formula>Merchandiser__r.LfourDepartment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>部门</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discount__c</fullName>
        <formula>TransactionAmount__c / StandardAmount__c</formula>
        <label>折扣(%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DocumentDate__c</fullName>
        <label>单据日期</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DoesConfirm__c</fullName>
        <label>流程是否确认</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>是</fullName>
                </value>
                <value>
                    <fullName>否</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EquipmentModel__c</fullName>
        <formula>Equipment__r.Equipmentunittype__c</formula>
        <label>设备型号</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Equipment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>设备</label>
        <referenceTo>Equipment__c</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EstimatedDeliveryDate__c</fullName>
        <label>预计交货日期</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ExportDate__c</fullName>
        <label>导出日期</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ExportedToNC__c</fullName>
        <label>是否导出到NC</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>是</fullName>
                </value>
                <value>
                    <fullName>否</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FifthPaymentAmount__c</fullName>
        <formula>ContractAmount__c * FifthPaymentRatio__c</formula>
        <label>第五笔回款金额</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FifthPaymentRatio__c</fullName>
        <label>第五笔回款比例</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>FifthRatioPayment__c</fullName>
        <label>第五比回款方式</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinalCustomer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>最终客户</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>订单</relationshipLabel>
        <relationshipName>FinalCustomerOder</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Financing__c</fullName>
        <label>是否融资</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>是</fullName>
                </value>
                <value>
                    <fullName>否</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FirstCamp__c</fullName>
        <label>客户是否首营</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>是</fullName>
                </value>
                <value>
                    <fullName>否</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FirstPaymentAmount__c</fullName>
        <formula>TheFirstPaymentRatio__c   *  ContractAmount__c</formula>
        <label>第一笔回款金额</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FirstPaymentMethod__c</fullName>
        <label>第一笔付款方式</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FourthPaymentAmount__c</fullName>
        <formula>FourthPaymentRatio__c * ContractAmount__c</formula>
        <label>第四笔回款金额</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FourthPaymentMethod__c</fullName>
        <label>第四笔回款方式</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FourthPaymentRatio__c</fullName>
        <label>第四笔回款比例</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>HospitalBusinessApproval__c</fullName>
        <label>医院营业批准书</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>有</fullName>
                </value>
                <value>
                    <fullName>无</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HospitalBusinessLicense__c</fullName>
        <label>医院的营业执照</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>有</fullName>
                </value>
                <value>
                    <fullName>无</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HospitalPracticeApproval__c</fullName>
        <label>医院执业批准书</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>有</fullName>
                </value>
                <value>
                    <fullName>无</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>InstallationDate__c</fullName>
        <label>安装日期</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Introductions__c</fullName>
        <label>其他说明</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InvoiceMailingAddress__c</fullName>
        <label>发票邮寄地址</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InvoiceType__c</fullName>
        <label>发票类型</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>增值税发票</fullName>
                </value>
                <value>
                    <fullName>普通发票</fullName>
                </value>
                <value>
                    <fullName>服务费发票</fullName>
                </value>
                <value>
                    <fullName>往来发票</fullName>
                </value>
                <value>
                    <fullName>收据</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Invoice__c</fullName>
        <label>发票抬头</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoicerphone__c</fullName>
        <label>收票人电话</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>IsTheProductFirst__c</fullName>
        <label>产品是否首营</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>是</fullName>
                </value>
                <value>
                    <fullName>否</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MarketingOrganizing__c</fullName>
        <label>销售组织</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>北京高视远望科技有限责任公司</fullName>
                </value>
                <value>
                    <fullName>上海明望医疗器械有限公司</fullName>
                </value>
                <value>
                    <fullName>天津高视晶品医疗技术有限公司</fullName>
                </value>
                <value>
                    <fullName>Global Vision HongKong Limited</fullName>
                </value>
                <value>
                    <fullName>上海高视医疗技术有限公司</fullName>
                </value>
                <value>
                    <fullName>宁波高视精密医疗技术有限公司</fullName>
                </value>
                <value>
                    <fullName>天津高视众望科技有限公司</fullName>
                </value>
                <value>
                    <fullName>宁波高斯医疗科技有限公司</fullName>
                </value>
                <value>
                    <fullName>温州雷蒙光电科技有限公司</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Merchandiser__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>归属人</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Merchandiser</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NC__c</fullName>
        <formula>Merchandiser__r.NCNumber__c</formula>
        <label>NC员工编号</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NCemploye__c</fullName>
        <formula>CreatedBy.NCNumber__c</formula>
        <label>NC员工编号</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NoteInformation__c</fullName>
        <label>备注信息</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OA__c</fullName>
        <label>合同是否已上传OA</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>是</fullName>
                </value>
                <value>
                    <fullName>否</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OrderClerk__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>订单业务员</label>
        <referenceTo>User</referenceTo>
        <relationshipName>OrderClerk</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderSource__c</fullName>
        <label>订单来源</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>有合同</fullName>
                </value>
                <value>
                    <fullName>无合同</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OrderTheme__c</fullName>
        <label>订单主题</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PartsPrices__c</fullName>
        <label>有约定保修配件价格</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>PaymentMate__c</fullName>
        <label>付款日期</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PerformanceSplit__c</fullName>
        <label>业绩绩效拆分</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PeriodPayment__c</fullName>
        <label>回款周期</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>n/0</fullName>
                </value>
                <value>
                    <fullName>n/30</fullName>
                </value>
                <value>
                    <fullName>n/60</fullName>
                </value>
                <value>
                    <fullName>n/90</fullName>
                </value>
                <value>
                    <fullName>n/180</fullName>
                </value>
                <value>
                    <fullName>n/365</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PublicPrivate__c</fullName>
        <label>公立/民营</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>公立</fullName>
                </value>
                <value>
                    <fullName>民营</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>订单数量</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RegisteredAddress__c</fullName>
        <label>注册地址/电话</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remarks__c</fullName>
        <label>备注</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ResponsiblePerson__c</fullName>
        <label>催款责任人</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reviewer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>审核人</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Reviewer</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SHR__c</fullName>
        <label>收货人</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SHaddress__c</fullName>
        <label>收货地址</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SHphone__c</fullName>
        <label>收货人电话</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ScopeLicense__c</fullName>
        <label>代理商资质是否符合</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>是</fullName>
                </value>
                <value>
                    <fullName>否</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SecondPaymentAmount__c</fullName>
        <formula>SecondPaymentRatio__c * ContractAmount__c</formula>
        <label>第二笔回款金额</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SecondPaymentMethod__c</fullName>
        <label>第二笔回款方式</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SecondPaymentRatio__c</fullName>
        <label>第二笔回款比例</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>StandardAcceptanceClause__c</fullName>
        <label>标准验收条款</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>是</fullName>
                </value>
                <value>
                    <fullName>否</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>StandardAmount__c</fullName>
        <label>标准金额（元）</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SyncLog__c</fullName>
        <label>同步日志</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TaxpayerIdentification__c</fullName>
        <label>纳税人识别号</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TheFirstPaymentRatio__c</fullName>
        <label>第一笔回款比例</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>TheNatureOfTheContract__c</fullName>
        <formula>text(Contract.ContractCharacter__c)</formula>
        <label>合同性质</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ThirdPaymentAmount__c</fullName>
        <formula>ThirdPaymentRatio__c * ContractAmount__c</formula>
        <label>第三笔回款金额</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ThirdPaymentMethod__c</fullName>
        <label>第三笔回款方式</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ThirdPaymentRatio__c</fullName>
        <label>第三笔回款比例</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>TicketCollector__c</fullName>
        <label>收票人</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TotalTaxAmount__c</fullName>
        <label>价税合计</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TransactionAmount__c</fullName>
        <label>成交金额（元）</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>WarrantyEndDateJS__c</fullName>
        <label>保修结束日期（技术）</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>WarrantyEndDate__c</fullName>
        <formula>ADDMONTHS(WarrantyStartDate__c,WarrantyPeriod__c)</formula>
        <label>保修结束日期</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>WarrantyExtension__c</fullName>
        <label>是否延保</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>是</fullName>
                </value>
                <value>
                    <fullName>否</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WarrantyPeriod__c</fullName>
        <label>保修期（月）</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WarrantyStartDateJS__c</fullName>
        <label>保修开始日期（技术）</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>WarrantyStartDate__c</fullName>
        <formula>InstallationDate__c</formula>
        <label>保修开始日期</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>bxqzhwt__c</fullName>
        <formula>WarrantyPeriod__c*30</formula>
        <label>保修期转换为天</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>devisenumber__c</fullName>
        <formula>Equipment__r.Name</formula>
        <label>设备序列号</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>销售机会</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>opportunity11</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>paymentMethod__c</fullName>
        <label>付款方式（技术）</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>uf__c</fullName>
        <label>UF SYS</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NC系统</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>AllActivatedOrders</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ORDERS.STATUS_CODE</field>
            <operation>equals</operation>
            <value>A</value>
        </filters>
        <label>All Activated Orders</label>
    </listViews>
    <listViews>
        <fullName>AllDraftOrders</fullName>
        <columns>ORDERS.ORDER_NUMBER</columns>
        <columns>SALES.ACCOUNT.NAME</columns>
        <columns>ORDERS.TOTAL_AMOUNT</columns>
        <columns>ORDERS.EFFECTIVE_DATE</columns>
        <columns>ORDERS.STATUS</columns>
        <columns>CONTRACT.CONTRACT_NUMBER</columns>
        <columns>ORDER.RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ORDERS.STATUS_CODE</field>
            <operation>equals</operation>
            <value>D</value>
        </filters>
        <label>所有草稿订单</label>
        <language>zh_CN</language>
    </listViews>
    <listViews>
        <fullName>AllOrders</fullName>
        <columns>ORDERS.ORDER_NUMBER</columns>
        <columns>ORDER.RECORDTYPE</columns>
        <columns>SALES.ACCOUNT.NAME</columns>
        <columns>ORDERS.TOTAL_AMOUNT</columns>
        <columns>ORDERS.EFFECTIVE_DATE</columns>
        <columns>ORDERS.STATUS</columns>
        <columns>CONTRACT.CONTRACT_NUMBER</columns>
        <filterScope>Everything</filterScope>
        <label>所有订单</label>
    </listViews>
    <recordTypes>
        <fullName>FeedbackInformation</fullName>
        <active>false</active>
        <label>物流部反馈信息</label>
    </recordTypes>
    <recordTypes>
        <fullName>RecordType</fullName>
        <active>true</active>
        <label>寄存销售</label>
    </recordTypes>
    <recordTypes>
        <fullName>RecordType11</fullName>
        <active>true</active>
        <label>技术服务延保销售</label>
    </recordTypes>
    <recordTypes>
        <fullName>RecordType111</fullName>
        <active>true</active>
        <label>技术配件销售</label>
    </recordTypes>
    <recordTypes>
        <fullName>RecordType22</fullName>
        <active>true</active>
        <label>设备租赁</label>
    </recordTypes>
    <recordTypes>
        <fullName>RecordType221</fullName>
        <active>true</active>
        <label>设备外贸销售</label>
    </recordTypes>
    <recordTypes>
        <fullName>RecordType223</fullName>
        <active>true</active>
        <label>技术耗材销售</label>
    </recordTypes>
    <recordTypes>
        <fullName>RecordType44</fullName>
        <active>true</active>
        <label>耗品销售</label>
    </recordTypes>
    <recordTypes>
        <fullName>RecordType441</fullName>
        <active>true</active>
        <label>技术服务维修销售</label>
    </recordTypes>
    <recordTypes>
        <fullName>RecordType4412</fullName>
        <active>true</active>
        <label>设备内贸销售</label>
    </recordTypes>
    <recordTypes>
        <fullName>RecordType776</fullName>
        <active>true</active>
        <label>技术服务保修销售</label>
    </recordTypes>
    <recordTypes>
        <fullName>RecordTypew</fullName>
        <active>true</active>
        <label>耗材销售</label>
    </recordTypes>
    <recordTypes>
        <fullName>TechnicalFeedback</fullName>
        <active>false</active>
        <label>技术部反馈</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>biaozhunyashou</fullName>
        <active>true</active>
        <errorConditionFormula>IF(text(StandardAcceptanceClause__c)=&quot;否&quot;, AcceptanceClause__c=&quot;&quot;,null)</errorConditionFormula>
        <errorDisplayField>AcceptanceClause__c</errorDisplayField>
        <errorMessage>非标准验收条款必须填写此文本框！！！</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>peijianbaoxiujiage</fullName>
        <active>true</active>
        <errorConditionFormula>IF(text(AccessoriesWarrantyPrice__c)=&quot;有约定&quot;, PartsPrices__c=&quot;&quot;,null)</errorConditionFormula>
        <errorDisplayField>PartsPrices__c</errorDisplayField>
        <errorMessage>约定产品配件保修价格的必须填写此文本框！！！！</errorMessage>
    </validationRules>
</CustomObject>